fixed overflow issue

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,7 +1,4 @@
-.overflow-x-hidden {
-   // height: 335rem;
-    //overflow-x: hidden;
-}
+
 html {
     scroll-behavior: smooth;
 }
@@ -9,8 +6,13 @@ html {
     box-sizing: border-box;
 }
 a, a:hover, a:visited {
+    
     text-decoration: none;
     color: inherit;
+    min-width: 9rem;
+    width: 100%;
+    height: 100%;
+    padding: .8em .8em;
     
 }
 
